# wenyi

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  config.yaml  pyproject.toml
DOCS/: token-and-latency-optimization-review.md
scripts/: ab_effort.py
tests/: fake_llm.py  sample_data.py  test_assemble.py  test_backmatter.py  test_bilingual.py  test_cli.py  test_glossary.py  test_glossary_agents.py  test_glossary_token_diet.py  test_ingest.py  test_lint.py  test_llm.py  test_miner.py  test_namer.py  test_naturalizer.py  test_newfeatures.py  test_orchestrator.py  test_review_polish.py  test_translator.py  test_usage.py
trans_novel/: cli.py  config.py
trans_novel/agents/: analyzer.py  base.py  consistency.py  glossary_auditor.py  langprofile.py  namer.py  naturalizer.py  polisher.py  prompts.py  reviewer.py  synopsis.py  translator.py
trans_novel/assemble/: report.py  translator.py  writer.py
trans_novel/glossary/: extractor.py  miner.py  resolver.py  store.py
trans_novel/ingest/: epub_reader.py  epub_toc.py  fb2_reader.py  models.py  segmenter.py  text_reader.py
trans_novel/llm/: __init__.py  base.py
trans_novel/pipeline/: backmatter.py  context.py  lint.py  orchestrator.py  runstore.py
trans_novel/postprocess/: punct.py
